# linkedinvcard

./: README.org
chatgpt/: README-2.org  README.org  dialogue.transcript  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.sh
chatgpt/linkedinVcard-class/: remote_augmentor.py  utils.py
chatgpt/linkedinVcard-func/: common_args.py  remote_augmentation.py  update_with_invitation.py  utils.py
chatgpt/linkedinVcard-func/linkedin-vcard-project/tools/: augment_contact_info.py  common_args.py  extract_connections.py  merge_vcards.py
linkedIn.com-transcript/: README.org
linkedIn.posts/: Microsoft-LinkedIn-letter.org  Microsoft-LinkedIn-letter.txt  linkingOut.org  linkingOut.txt  myLinkedIn-Basic.org  myLinkedIn-Basic.txt  myLinkedIn-Plus.org  myLinkedIn-Plus.txt  myLinkedInPostsOverview.org  myLinkedInPostsOverview.txt
py3/: README.rst  _description.org  setup.py
py3/bisos/linkedinVcard/: initExplicit.py  linkedin_csu.py
py3/bisos/linkedinvcard/: augmentor.py  connections.py  generate_vcards.py  invitations.py  k1-linkedinWebInfo.py  linkedinWeb_csu.py  messages.py  messages_822.py
py3/bisos/myLinkedIn/: linkedinUtils.py  linkedinWebInfo.py  linkedinWeb_csu.py  linkedin_csu.py
py3/images/: ebdbMtdt.gv  ebdbMtdtRoot.gv  exportedFileInfo.gv  exportedPlusWebCons.gv  exportedPlusWebConsPlusExternal.gv  linkedin-graphviz.cs  linkedinVcardWithConsumers.gv  linkedinVcardWithConsumersRoot.gv
py3/panels/bisos.myLinkedIn/_nodeBase_/: fullUsagePanel-en.org
