[metadata]
name = bisos.linkedin
version = 0.1.0
description = Utilities for converting LinkedIn exports to vCards
long_description = file: README.org
long_description_content_type = text/plain
author = Your Name
license = MIT
platforms = any

[options]
packages = find:
python_requires = >=3.8
install_requires =
    vobject
    pandas
    selenium
